--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
 
         .bg {
-            background-image: url('img/background.jpg');
+            background-image: url('img/background.png');
             height: 100%;
             background-position: center;
             background-repeat: no-repeat;
